--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -3,7 +3,7 @@
 <div class="interests-container container-block">
 
   <h2 class="container-block-title">
-    Centre d'interets
+    Centres d'intérêt
   </h2>
 
   <ul class="list-unstyled interests-list">
